@@ -1,3 +1,6 @@
+r270 (01. 11. 2024):
+Reorganized code in waypoints to allow changing time
+
 r269 (29. 10. 2024):
 Assault Tracker: Host will sync current assault data to clients after endless assault has ended
 Armor Buff: Fixed an issue where the buff does not update properly after passive armor regen
